src/app/dim-ui/PressTip.m.scss
@use '../variables.scss' as *;

.arrow {
  width: 10px;
  height: 10px;
  border-style: solid;
  position: absolute;
  border-color: #424259;
}

.control {
  user-select: none;
  touch-action: none;
  -webkit-touch-callout: none;
}

.header {
  h2 {
    font-size: 14px;
    margin: 0;
    color: white;
  }
  h3 {
    font-size: 12px;
    margin: 0;
    color: #aaa;
  }
}

.content {
  width: fit-content;
  padding: 8px;
}

.tooltip {
  position: absolute;
  background-color: #14141f;
  color: white;
  width: fit-content;
  max-width: 300px;
  border: 1px solid #424259;
  border-top: 5px solid #78788c;
  box-shadow: 0 0 4px 2px #16162680;
  text-align: left;
  z-index: 99999;
  white-space: pre-wrap;
  box-sizing: border-box;
  user-select: none;

  &.wideTooltip {
    max-width: 100vw;
  }

  .header {
    background-color: #070709;
    padding: 6px 8px;
    margin: -8px -8px 6px -8px;

    h2 {
      @include destiny-header;
    }
  }

  hr {
    border-color: #424259;
  }

  p {
    margin-bottom: 0;
  }

  &[data-popper-placement='top'] .arrow {
    width: 0;
    height: 0;
    border-width: 5px 5px 0 5px;
    border-left-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;
    bottom: -5px;
  }
  &[data-popper-placement='bottom'] .arrow {
    width: 0;
    height: 0;
    border-width: 0 5px 5px 5px;
    top: -10px;
    border-color: transparent transparent #78788c transparent;
  }
  &[data-popper-placement='right'] .arrow {
    width: 0;
    height: 0;
    border-width: 5px 5px 5px 0;
    border-left-color: transparent;
    border-top-color: transparent;
    border-bottom-color: transparent;
    left: -5px;
  }
  &[data-popper-placement='left'] .arrow {
    width: 0;
    height: 0;
    border-width: 5px 0 5px 5px;
    border-top-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;
    right: -5px;
  }
}

